--- a/data/posts/frontend-build-tools-evolution.mdx
+++ b/data/posts/frontend-build-tools-evolution.mdx
@@ -6,7 +6,7 @@ date: "2024-05-01"
 published: true
 category: "技术"
 tags: ["构建工具", "前端工程化", "Webpack"]
-author: "hailong"
+author: "daichongte"
 readingTime: 18
 ---
 
