--- a/data/posts/frontend-design-patterns.mdx
+++ b/data/posts/frontend-design-patterns.mdx
@@ -6,7 +6,7 @@ date: "2024-04-01"
 published: true
 category: "技术"
 tags: ["设计模式", "JavaScript", "架构设计"]
-author: "hailong"
+author: "daichongte"
 readingTime: 16
 ---
 
