--- a/data/posts/frontend-monitoring-performance.mdx
+++ b/data/posts/frontend-monitoring-performance.mdx
@@ -6,7 +6,7 @@ date: "2024-06-01"
 published: true
 category: "技术"
 tags: ["性能监控", "前端开发", "性能优化"]
-author: "hailong"
+author: "daichongte"
 readingTime: 20
 ---
 
