--- a/data/posts/git-workflow-migration.mdx
+++ b/data/posts/git-workflow-migration.mdx
@@ -6,7 +6,7 @@ date: "2017-09-20"
 published: true
 category: "技术"
 tags: ["Git", "版本控制"]
-author: "hailong"
+author: "daichongte"
 readingTime: 6
 ---
 
