--- a/data/posts/microfrontend-architecture.mdx
+++ b/data/posts/microfrontend-architecture.mdx
@@ -6,7 +6,7 @@ date: "2024-03-15"
 published: true
 category: "技术"
 tags: ["微前端", "架构设计"]
-author: "hailong"
+author: "daichongte"
 readingTime: 18
 ---
 
