--- a/data/posts/next-js-guide.mdx
+++ b/data/posts/next-js-guide.mdx
@@ -6,7 +6,7 @@ date: "2024-01-20"
 published: true
 category: "技术"
 tags: ["Next.js", "React"]
-author: "hailong"
+author: "daichongte"
 readingTime: 8
 ---
 
