--- a/data/posts/pwa-progressive-web-apps.mdx
+++ b/data/posts/pwa-progressive-web-apps.mdx
@@ -6,7 +6,7 @@ date: "2024-03-11"
 published: true
 category: "新技术探索"
 tags: ["PWA", "前端开发"]
-author: "hailong"
+author: "daichongte"
 readingTime: 15
 ---
 
