--- a/data/posts/低代码方案.mdx
+++ b/data/posts/低代码方案.mdx
@@ -6,7 +6,7 @@ date: "2023-01-25"
 published: true
 category: "技术"
 tags: ["低代码", "AI"]
-author: "hailong"
+author: "daichongte"
 readingTime: 2
 ---
 
