--- a/data/posts/前端知识点复习.mdx
+++ b/data/posts/前端知识点复习.mdx
@@ -6,7 +6,7 @@ date: "2023-12-14"
 published: true
 category: "Frontend"
 tags: ["前端开发"]
-author: "hailong"
+author: "daichongte"
 readingTime: "15 min read"
 ---
 
