--- a/data/posts/typescript-advanced-patterns.mdx
+++ b/data/posts/typescript-advanced-patterns.mdx
@@ -6,7 +6,7 @@ date: "2024-03-01"
 published: true
 category: "技术"
 tags: ["TypeScript", "前端开发"]
-author: "hailong"
+author: "daichongte"
 readingTime: 15
 ---
 
